apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      # init container which creates directories for subpaths
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.17.2952-ls312 # {"$imagepolicy": "flux-system:sonarr"}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: media
              mountPath: /data/media
              subPath: media/
            - name: config
              mountPath: /data/usenet
              subPath: usenet/
            - name: config
              mountPath: /config
              subPath: sonarr/config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: you-are-a-pirate-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
