apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: jellyfin
  annotations:
    metallb.io/loadBalancerIPs: 192.168.176.222
spec:
  type: LoadBalancer
  selector:
    app: sonarr
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: 8989
