apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-http
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: web
      kind: Gateway

  hostnames:
    - sonarr.homelab

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
        - name: sonarr
          namespace: jellyfin
          port: 8989

      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: ipallowlist
