apps/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host("sonarr.homelab")
      kind: Rule
      services:
        - name: sonarr
          port: 8989
